@@ -2312,8 +2312,10 @@ RuleCallContext::$supportedActions[] = Array(
             'tag' => 'tags',
             'from' => 'from',
             'to' => 'to',
+            'src_negated' => 'source_negated',
             'src' => 'source',
             'src_resolved_sum' => 'src_resolved_sum',
+            'dst_negated' => 'destination_negated',
             'dst' => 'destination',
             'dst_resolved_sum' => 'dst_resolved_sum',
             'service' => 'service',
