@@ -2,6 +2,8 @@ CHANGELOG
 
 1.5.12
 
+utils:
+rules-edit: action 'exportToExcel' new fields 'dst_negated' and 'src_negated' to show when some fields are negated
 
 
 1.5.11
